# jenkins-agent-operator

./: .gitignore  .licenserc.yaml  .woke.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  charmcraft.yaml  check_workflow_status.sh  config.yaml  index.html  metadata.yaml  pyproject.toml  renovate.json  requirements.txt  tox.ini  tox.toml
.github/: pull_request_template.yaml
.github/workflows/: integration_test.yaml  load_test.yaml  publish_charm.yaml  test.yaml
281/: index.html
281/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
281/export/: influxDbData.txt  prometheusData.txt
281/history/: categories-trend.json  history.json  retry-trend.json
281/widgets/: duration-trend.json  executors.json  history-trend.json  status-chart.json  summary.json
286/: index.html
286/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
286/export/: influxDbData.txt  prometheusData.txt
286/history/: history-trend.json  history.json
286/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  retry-trend.json  summary.json
287/: index.html
287/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
287/export/: influxDbData.txt  prometheusData.txt
287/history/: categories-trend.json  duration-trend.json  history.json
287/widgets/: executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
288/: index.html
288/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
288/export/: influxDbData.txt  prometheusData.txt
288/history/: categories-trend.json  history.json  retry-trend.json
288/widgets/: duration-trend.json  executors.json  history-trend.json  severity.json  summary.json
289/: index.html
289/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
289/export/: influxDbData.txt  prometheusData.txt
289/history/: history.json  retry-trend.json
290/: index.html
290/data/: packages.json  (+5 more)
291/: index.html
293/: index.html
294/: index.html
295/: index.html
297/: index.html
298/: index.html
299/: index.html
300/: index.html
303/: index.html
304/: index.html
305/: index.html
306/: index.html
321/: index.html
323/: index.html
325/: index.html
336/: index.html
337/: index.html
338/: index.html
356/: index.html
360/: index.html
361/: index.html
365/: index.html
368/: index.html
371/: index.html
378/: index.html
389/: index.html
401/: index.html
409/: index.html
410/: index.html
424/: index.html
433/: index.html
435/: index.html
440/: index.html
459/: index.html
460/: index.html
462/: index.html
466/: index.html
docs/: index.md
jenkins_agent_snap/: snapcraft.yaml
src/: agent_observer.py  charm.py  charm_state.py  metadata.py  server.py  service.py
src-docs/: agent_observer.py.md  charm.py.md  charm_state.py.md  service.py.md
templates/: Jenkinsfile  jenkins_agent.service  jenkins_agent.sh  jenkins_agent_env.conf.j2
tests/: __init__.py  conftest.py
(+947 files in other folders)
